# ComfyUI-GetBooruTag-ED

./: GetBooruTagED.py  __init__.py  pyproject.toml
js/: url_changed.js
