[project]
name = "comfyui-getboorutag-ed"
description = "Get tag from Booru site."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/NyaamZ/ComfyUI-GetBooruTag-ED"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-GetBooruTag-ED"
Icon = ""
